Change DNS forwarders to array.
